--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,4 +70,34 @@ body {
     margin: 40px;
     padding: 20px;
   }
+
+  @media (min-width: 980px) {
+    .container {  
+      max-width: 960px;
+    }
+    .content_container {
+        margin-top: 110px;
+        margin-bottom: 110px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      max-width: 960px;
+    }
+    .content_container {
+        margin-top: 110px;
+        margin-bottom: 110px;
+    }
+  }
+  
+  @media (min-width: 640px) {
+    .container {
+      max-width: 960px;
+    }
+    .content_container {
+        margin-top: 110px;
+        margin-bottom: 110px;
+    }
+  }
   
